@@ -28,6 +28,7 @@ BA   21- lfun(...,t_SER,n>=1) returned a wrong result
      22- lfun(,, negative derivation order) => internal bug
      23- SEGV in sumnummonieninit when accuracy too low
 BA   24- ellidentify: check curve is over Q
+     25- gdivgs(t_RFRAC,s) could create invalid objects
 
   Added
       1- [libari] ZM_isidentity
